--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewpoint" content="width=device-width,initial-scale=1" />
+    <title>Will you be my valentine?</title>
+    <style>
+        :root { --yesScale: 1; }
+        body {
+            font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+            display: grid;
+            place-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background: #fff0f6;
+            color: #1f1f1f;
+            text-align: center;
+            padding: 24px;
+        }
+        .card {
+            background: white;
+            padding: 28px;
+            border-radius: 18px;
+            box-shadow: 0 10px 30px rgba(0,0,0,.08);
+            width: min(520px, 100%);
+        }
+        h1 { margin: 0 0 18px; font-size: 2.1rem; }
+        .gif {
+            width: 100%;
+            border-radius: 14px;
+            overflow: hidden;
+            background: #ffe3ec;
+            margin: 0 auto 18px;
+            aspect-ratio: 16 / 10;
+            display: grid;
+            place-items: center;
+        }
+        .gif img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+        .buttons {
+            display: flex;
+            gap: 14px;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 10px;
+        }
+        button {
+            border: 0;
+            padding: 12px 18px;
+            border-radius: 999px;
+            font-size: 1.05rem;
+            cursor: pointer;
+            transition: transform 160ms ease, filter 160ms ease;
+        }
+        button:active { transform: scale(.98); }
+        #yesBtn {
+            background: #ff4d6d;
+            color: white;
+            transform: scale(var(--yesScale));
+        }
+        #yesBtn:hover { filter: brightness(1.05); }
+        #noBtn {
+            background: #e9ecef;
+            color: #343a40;
+        }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <h1>Will you be my valentine?</h1>
 
+        <div class="gif">
+            <img
+                id="askGif"
+                src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGZ4MGkyNHNyeW9hcGkwaXpmZHVkeG03Y2xwempocnh2eWRpZms1dCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wvYNSqBAMDVx8CEYkt/giphy.gif"
+                alt="Cute gif"
+            />
+        </div>
+        
+        <div class="buttons">
+            <button id="yesBtn">Yes</button>
+            <button id="noBtn">No</button>
+        </div>
+    </div>
+
+    <script>
+        const root = document.documentElement;
+        const yesBtn = document.getElementById("yesBtn");
+        const noBtn = document.getElementById("noBtn");
+
+        let scale = 1;
+
+        noBtn.addEventListener("click", () => {
+            scale = Math.min(scale + 0.25, 6);
+            root.style.setProperty("--yesScale", scale);
+        });
+
+        yesBtn.addEventListener("click", () => {
+            window.location.href = "yes.html";
+        });
+    </script>
+</body>
+</html>
